--- a/docs/array/1-两数之和.md
+++ b/docs/array/1-两数之和.md
@@ -32,5 +32,5 @@
 ```
 
 思路：
-1. 暴力枚举：
-2. 使用哈希表来存储结果
+1. 暴力枚举
+2. 使用哈希表来存储结果；该方法主要是将目标值减去当前元素的结果存入哈希表中，如果遍历的过程中发现该元素的与目标值的差值已经存在，那么哈希表中存储的index与当前的i则是返回的结果；
