--- a/docs/array/1-两数之和.md
+++ b/docs/array/1-两数之和.md
@@ -31,6 +31,11 @@
 只会存在一个有效答案
 ```
 
-思路：
+## 思路
+
 1. 暴力枚举
 2. 使用哈希表来存储结果；该方法主要是将目标值减去当前元素的结果存入哈希表中，如果遍历的过程中发现该元素的与目标值的差值已经存在，那么哈希表中存储的index与当前的i则是返回的结果；
+
+## 实现
+
+[代码 -> com.rysis/array/Main.java](../../src/com/rysis/array/Main.java)
