--- a/docs/array/1-两数之和.md
+++ b/docs/array/1-两数之和.md
@@ -1,5 +1,7 @@
 # 1 两数之和
 
+easy
+
 ## 题目
 
 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 的那两个整数，并返回它们的数组下标。
@@ -38,4 +40,4 @@
 
 ## 实现
 
-[代码 -> com.rysis/array/Main.java](../../src/com/rysis/array/Main.java)
+[代码 -> com.rysis/array/Main_1.java](../../src/com/rysis/array/Main_1.java)
