[u]228题-更新解题思路

--- a/docs/array/228-汇总区间.md
+++ b/docs/array/228-汇总区间.md
@@ -53,6 +53,11 @@ nums 按升序排列
 
 ## 思路
 
+#### 链表方法
+
+1. 就是按照题目要求使用链表作为临时区域存放数字区间；
+2. 然后遍历数组即可，需要注意最后一组元素无论是区间还是单独的元素，都需要在循环结束后在放入结果集当中；
+3. 还需要额外注意，Java中判断数字是否连续使用小数+1判断，不要使用减法。可能会导致负负得正，然后超出int长度导致结果不正确；
 
 ## 实现
 
