[c]766 & 更新加文档的格式

--- a/docs/array/888-公平的糖果棒交换.md
+++ b/docs/array/888-公平的糖果棒交换.md
@@ -34,14 +34,12 @@ easy
 ```
 
 提示：
-```
-1 <= A.length <= 10000
-1 <= B.length <= 10000
-1 <= A[i] <= 100000
-1 <= B[i] <= 100000
-保证爱丽丝与鲍勃的糖果总量不同。
-答案肯定存在。
-```
+- `1 <= A.length <= 10000`
+- `1 <= B.length <= 10000`
+- `1 <= A[i] <= 100000`
+- `1 <= B[i] <= 100000`
+- 保证爱丽丝与鲍勃的糖果总量不同。
+- 答案肯定存在。
 
 ## 思路
 
