--- a/docs/array/1-两数之和.md
+++ b/docs/array/1-两数之和.md
@@ -10,28 +10,29 @@ easy
 
 你可以按任意顺序返回答案。
 
-```
+
 示例 1：
+```
 输入：nums = [2,7,11,15], target = 9
 输出：[0,1]
 解释：因为 nums[0] + nums[1] == 9 ，返回 [0, 1] 。
-
+```
 示例 2：
+```
 输入：nums = [3,2,4], target = 6
 输出：[1,2]
-
+```
 示例 3：
+```
 输入：nums = [3,3], target = 6
 输出：[0,1]
 ```
 
 提示：
-```
-2 <= nums.length <= 103
--109 <= nums[i] <= 109
--109 <= target <= 109
-只会存在一个有效答案
-```
+- `2 <= nums.length <= 103`
+- `-109 <= nums[i] <= 109`
+- `-109 <= target <= 109`
+- 只会存在一个有效答案
 
 ## 思路
 
