--- a/docs/array/1232-缀点成线.md
+++ b/docs/array/1232-缀点成线.md
@@ -8,23 +8,23 @@ easy
 
 请你来判断，这些点是否在该坐标系中属于同一条直线上，是则返回 true，否则请返回 false。
 
-```
 示例 1：
+```
 输入：coordinates = [[1,2],[2,3],[3,4],[4,5],[5,6],[6,7]]
 输出：true
+```
 
 示例 2：
+```
 输入：coordinates = [[1,1],[2,2],[3,4],[4,5],[5,6],[7,7]]
 输出：false
 ```
 
 提示：
-```
-2 <= coordinates.length <= 1000
-coordinates[i].length == 2
--10^4 <= coordinates[i][0], coordinates[i][1] <= 10^4
-coordinates中不含重复的点
-```
+- `2 <= coordinates.length <= 1000`
+- `coordinates[i].length == 2`
+- `-10^4 <= coordinates[i][0], coordinates[i][1] <= 10^4`
+- coordinates中不含重复的点
 
 ## 思路
 
