--- a/docs/array/228-汇总区间.md
+++ b/docs/array/228-汇总区间.md
@@ -12,16 +12,18 @@ easy
 "a->b" ，如果 a != b
 "a" ，如果 a == b
 
-```
 示例 1：
+```
 输入：nums = [0,1,2,4,5,7]
 输出：["0->2","4->5","7"]
 解释：区间范围是：
 [0,2] --> "0->2"
 [4,5] --> "4->5"
 [7,7] --> "7"
+```
 
 示例 2：
+```
 输入：nums = [0,2,3,4,6,8,9]
 输出：["0","2->4","6","8->9"]
 解释：区间范围是：
@@ -29,27 +31,31 @@ easy
 [2,4] --> "2->4"
 [6,6] --> "6"
 [8,9] --> "8->9"
+```
 
 示例 3：
+```
 输入：nums = []
 输出：[]
+```
 
 示例 4：
+```
 输入：nums = [-1]
 输出：["-1"]
+```
 
 示例 5：
+```
 输入：nums = [0]
 输出：["0"]
 ```
 
 提示：
-```
-0 <= nums.length <= 20
--231 <= nums[i] <= 231 - 1
-nums 中的所有值都 互不相同
-nums 按升序排列
-```
+- `0 <= nums.length <= 20`
+- `-231 <= nums[i] <= 231 - 1`
+- nums 中的所有值都 互不相同
+- nums 按升序排列
 
 ## 思路
 
