--- a/docs/array/643-子数组最大平均数1.md
+++ b/docs/array/643-子数组最大平均数1.md
@@ -14,8 +14,8 @@ easy
 ```
 
 提示：
-- 1 <= k <= n <= 30,000。
-- 所给数据范围 [-10,000，10,000]。
+- `1 <= k <= n <= 30,000`。
+- 所给数据范围 `[-10,000，10,000]`。
 
 ## 思路
 
