--- a/docs/array/724-寻找数组的中心索引.md
+++ b/docs/array/724-寻找数组的中心索引.md
@@ -12,27 +12,33 @@ easy
 
 注意：中心索引可能出现在数组的两端。
 
-```
 示例 1：
+```
 输入：nums = [1, 7, 3, 6, 5, 6]
 输出：3
 解释：
 索引 3 (nums[3] = 6) 的左侧数之和 (1 + 7 + 3 = 11)，与右侧数之和 (5 + 6 = 11) 相等。
 同时, 3 也是第一个符合要求的中心索引。
+```
 
 示例 2：
+```
 输入：nums = [1, 2, 3]
 输出：-1
 解释：
 数组中不存在满足此条件的中心索引。
+```
 
 示例 3：
+```
 输入：nums = [2, 1, -1]
 输出：0
 解释：
 索引 0 左侧不存在元素，视作和为 0 ；右侧数之和为 1 + (-1) = 0 ，二者相等。
+```
 
 示例 4：
+```
 输入：nums = [0, 0, 0, 0, 1]
 输出：4
 解释：
@@ -40,10 +46,8 @@ easy
 ```
 
 提示：
-```
-nums 的长度范围为[0, 10000]。
-任何一个nums[i] 将会是一个范围在[-1000, 1000]的整数。
-```
+- nums 的长度范围为[0, 10000]。
+- 任何一个nums[i] 将会是一个范围在[-1000, 1000]的整数。
 
 ## 思路
 
