--- a/docs/graph/1631-最小体力消耗路径.md
+++ b/docs/graph/1631-最小体力消耗路径.md
@@ -11,31 +11,33 @@ medium
 请你返回从左上角走到右下角的最小`体力消耗值`。
 
 
-```
 示例 1：
+```
 输入：heights = [[1,2,2],[3,8,2],[5,3,5]]
 输出：2
 解释：路径 [1,3,5,3,5] 连续格子的差值绝对值最大为 2 。
 这条路径比路径 [1,2,2,2,5] 更优，因为另一条路径差值最大值为 3 。
+```
 
 示例 2：
+```
 输入：heights = [[1,2,3],[3,8,4],[5,3,5]]
 输出：1
 解释：路径 [1,2,3,4,5] 的相邻格子差值绝对值最大为 1 ，比路径 [1,3,5,3,5] 更优。
+```
 
 示例 3：
+```
 输入：heights = [[1,2,1,1,1],[1,2,1,2,1],[1,2,1,2,1],[1,2,1,2,1],[1,1,1,2,1]]
 输出：0
 解释：上图所示路径不需要消耗任何体力。
 ```
 
 提示：
-```
-rows == heights.length
-columns == heights[i].length
-1 <= rows, columns <= 100
-1 <= heights[i][j] <= 106
-```
+- `rows == heights.length`
+- `columns == heights[i].length`
+- `1 <= rows, columns <= 100`
+- `1 <= heights[i][j] <= 106`
 
 ## 思路
 
