--- a/docs/graph/959-由斜杠划分区域.md
+++ b/docs/graph/959-由斜杠划分区域.md
@@ -10,24 +10,28 @@ easy
 
 返回区域的数目。
 
-```
 示例 1：
+```
 输入：
 [
  " /",
  "/ "
 ]
 输出：2
+```
 
 示例 2：
+```
 输入：
 [
  " /",
  "  "
 ]
 输出：1
+```
 
 示例 3：
+```
 输入：
 [
  "\\/",
@@ -35,8 +39,9 @@ easy
 ]
 输出：4
 解释：（回想一下，因为 \ 字符是转义的，所以 "\\/" 表示 \/，而 "/\\" 表示 /\。）
-
+```
 示例 4：
+```
 输入：
 [
  "/\\",
@@ -44,8 +49,9 @@ easy
 ]
 输出：5
 解释：（回想一下，因为 \ 字符是转义的，所以 "/\\" 表示 /\，而 "\\/" 表示 \/。）
-
+```
 示例 5：
+```
 输入：
 [
  "//",
@@ -55,10 +61,8 @@ easy
 ```
 
 提示：
-```
-1 <= grid.length == grid[0].length <= 30
-grid[i][j] 是'/'、'\'、或' '。
-```
+- `1 <= grid.length == grid[0].length <= 30`
+- grid[i][j] 是'/'、'\'、或' '。
 
 ## 思路
 
