--- a/docs/queue/232-用栈实现队列.md
+++ b/docs/queue/232-用栈实现队列.md
@@ -66,4 +66,4 @@ myQueue.empty(); // return false
 
 ## 实现
 
-[代码 -> com.rysis/string/Main_3.java](../../src/com/rysis/string/Main_3.java)
+[代码 -> com.rysis/queue/Main_232.java](../../src/com/rysis/queue/Main_232.java)
