[u]开始动态规划（DP）学习之路

--- a/docs/dp/746-使用最小花费爬楼梯.md
+++ b/docs/dp/746-使用最小花费爬楼梯.md
@@ -47,4 +47,4 @@ easy
 
 ## 实现
 
-[代码 -> com.rysis/array/Main_746.java](../../src/com/rysis/array/Main_746.java)
+[代码 -> com.rysis/dp/Main_746.java](../../src/com/rysis/dp/Main_746.java)
