[c]27-补交思路说明

--- a/docs/array/27-移除元素.md
+++ b/docs/array/27-移除元素.md
@@ -51,7 +51,26 @@ for (int i = 0; i < len; i++) {
 
 ## 思路
 
-todo
+将数组中指定的元素去掉，并且只能在数组内操作（替换），并返回数据新的长度。
+
+由于只能在数组内进行操作，所以双指针（一个遍历 、一个替换）是跑不了了。
+
+由于题目说了可以不要求顺序一致。那么就是有两种思路与解法，排序一致与 排序不一致。
+
+#### 排序一致
+
+- 两个指针，替换指针指向0，遍历指针指向1；
+- 遍历时看遍历指针元素与val是否一致，不一致时，在将元素与替换指针的元素进行替换，并且替换指针+1；
+
+如果val的元素很少，或者集中在前面，几乎所有元素都需要替换一遍。
+
+#### 排序不一致
+
+如果不要求排序一致的话，那么我们可以仅移动需要被替换的元素，而不重复的元素无需移动位置。
+
+- 两个指针，一个头指针，一个尾部指针。
+- 头指针小于等于尾指针时，头部找出需要被替换的元素位置，尾部找出不重复的元素，然后进行替换。
+- 最后头部指针移动的位置就是新数组的长度
 
 ## 实现
 
