[c]137-更新一种位运算的方法

--- a/docs/bit/137-只出现一次的数字2.md
+++ b/docs/bit/137-只出现一次的数字2.md
@@ -34,7 +34,22 @@ medium
 
 #### 位运算
 
-todo
+看题解总结的位运算方法一：
+- `a ^ 0 = a;  a ^ a = 0; => 0 ^ a ^ a = 0; 0 ^ a = a;`
+```
+x = 0; y = 0;
+-
+x = x ^ a ^ y -> a
+y = y ^ a ^ x -> 0
+-
+x = x ^ a ^ y -> 0
+y = y ^ a ^ x -> a
+-
+x = x ^ a ^ y -> 0
+y = y ^ a ^ x -> 0
+```
+
+应该是通过两个变量实现一个元素的，进行三次变换时，最终能归零的方法。
 
 ## 实现
 
