[u]690 dfs方法的实现

--- a/docs/tree/690-员工的重要性.md
+++ b/docs/tree/690-员工的重要性.md
@@ -28,6 +28,15 @@ easy
 
 todo
 
+#### DFS
+
+可是使用递归和非递归方式
+
+- 先将所有员工根据id，映射在哈希表中，变快速查找；
+- 然后使用创建dfs函数，判断当前id的员工信息，并记录重要度，然后检查是否存在下属员工，存在的员工遍历去递归操作，然后与父级的重要度依次相加。
+- 这里不断优先检查下属员工，所以是dfs的思路；
+- 最后的结果就是所有下属员工的重要度。
+
 ## 实现
 
 [代码 -> com.rysis/tree/Main_690.java](../../src/com/rysis/tree/Main_690.java)
