[c]102-BFS队列 的方法实现

--- a/docs/tree/102-二叉树的层序遍历.md
+++ b/docs/tree/102-二叉树的层序遍历.md
@@ -41,7 +41,14 @@ medium
 
 #### BFS
 
-todo
+广度优先搜索，就是优先查找每个层级的所有节点，当找出素有节点之后再深入下层节点进行查找。
+
+BFS一般使用的是队列来帮助我们记录节点。当查找到一个层级时，先把有所的节点放入队列中，消费时也是优先消费先存入的节点，然后把子节点添加到队列的尾部。
+
+当消费下一层的节点时，本层的节点也已经都被消耗完毕了。
+
+- 取出队列头部节点，然后将子节点放入队列尾部。
+- 如果队列不为空，继续重复上面的步骤。
 
 ## 实现
 
