[u]690 bfs方法的实现

--- a/docs/tree/690-员工的重要性.md
+++ b/docs/tree/690-员工的重要性.md
@@ -37,6 +37,15 @@ todo
 - 这里不断优先检查下属员工，所以是dfs的思路；
 - 最后的结果就是所有下属员工的重要度。
 
+#### BFS
+
+使用队列帮助。
+
+- 先将所有员工根据id，映射在哈希表中，变快速查找；
+- 然后依据BFS的思路，先把顶级员工id放入队列中
+- 消费队列头部元素。然后找出下属员工，并且放入队列尾部；
+- 依次循环并且记录每个员工的权重信息。直到没有下属员工为止。
+
 ## 实现
 
 [代码 -> com.rysis/tree/Main_690.java](../../src/com/rysis/tree/Main_690.java)
