--- a/docs/binarysearch/33-搜索旋转排序数组.md
+++ b/docs/binarysearch/33-搜索旋转排序数组.md
@@ -38,6 +38,11 @@ medium
 
 #### 二分法
 
+首先这套题满足了：
+- 数组元素不重复；
+- 原本是升序的，后经过旋转则变为了两端升序的组合。所以还是可以满足二分法的；
+- 一种是先遍历找出升序的交接点，然后看是属于那部分，然后作为两部分在继续二分查找；
+- 直接二分查找，两段里肯定有一段是连续的，如果不在连续的范围内，那么就是另一端。重复即可；
 
 ## 实现
 
