--- a/docs/binarysearch/374-猜数字大小.md
+++ b/docs/binarysearch/374-猜数字大小.md
@@ -27,4 +27,4 @@ easy
 
 ## 实现
 
-[代码 -> com.rysis/array/Main_374.java](../../src/com/rysis/array/Main_374.java)
+[代码 -> com.rysis/binarysearch/Main374.java](../../src/com/rysis/binarysearch/Main374.java)
