[c]451-桶排序方法

--- a/docs/string/451-根据字符出现频率排序.md
+++ b/docs/string/451-根据字符出现频率排序.md
@@ -51,6 +51,15 @@ medium
 2. 然后把entry放入priorityqueue中,根据value进行降序
 3. 然后在依次弹出顶部元素
 
+#### 哈希表+桶排序
+
+这里是参照了题解.
+
+1. 首先还是使用哈比表进行字符出现次数的统计,并且记录最先次数最多的字符maxCount;
+2. 然后创建长度为maxCount的桶数组,每个桶是由stringbuilder组成;
+3. 然后遍历map的entry,出现次数作为桶的索引,字符append桶中(可能会有出现相同次数的多个字符)
+4. 然后讲桶数组由高索引到低索引去遍历,去除stringbuilder后每个字符循环apend,桶的索引次数,组成最后的结果.
+
 ## 实现
 
 [代码 -> com.rysis/string/Main451.java](../../src/com/rysis/string/Main451.java)
