[c]1588-前缀和方法

--- a/docs/array/1588-所有奇数长度子数组的和.md
+++ b/docs/array/1588-所有奇数长度子数组的和.md
@@ -58,6 +58,16 @@ easy
 
 然后开始从一遍历，初始化个窗口，大小就是第一步中元素的个数。然后讲结果依次累加即可。
 
+#### 前缀和
+
+因为题目要求的答案，总是包含了前面的元素。那么我们就可以用前缀和数组去简化我们的计算过程，这样让我们更专注于寻找窗口内的元素个数的起止角标。
+
+然后通过差值来得到窗口内的元素和。
+
+计算的思路和暴力破解很类似。只需要两层循环，一个还是从数组0角标开始，一直到结束。
+
+另一个是控制窗口内的元素个数，步长为2，内部元素从1开始，一致到达到数组最大子奇数数组的长度为止。
+
 ## 实现
 
 [代码 -> com.rysis/array/Main1588.java](../../src/com/rysis/array/Main1588.java)
