--- a/docs/binarysearch/二分查找.md
+++ b/docs/binarysearch/二分查找.md
@@ -1,3 +1,5 @@
+[TOC]
+
 # 二分查找
 
 ## 如何识别二分查找？
@@ -5,19 +7,18 @@
 如前所述，二分查找是一种在每次比较之后将查找空间一分为二的算法。每次需要查找集合中的索引或元素时，都应该考虑二分查找。如果集合是无序的，我们可以总是在应用二分查找之前先对其进行排序。
 
 ## 成功的二分查找的 3 个部分
-   
+
 二分查找一般由三个主要部分组成：
-    
+
 - 预处理 —— 如果集合未排序，则进行排序。
 - 二分查找 —— 使用循环或递归在每次比较后将查找空间划分为两半。
 - 后处理 —— 在剩余空间中确定可行的候选者。
-
 
 ## 模板
 
 所以有时候为了简化二分法的处理，人们总结出了一些模板
 
-#### 模板1
+### 模板1
 
 这是最普通的模板，用户快速定位某个元素在这个有序序列中的位置。
 
@@ -41,20 +42,28 @@ int binarySearch(int[] nums, int target){
 }
 ```
 
-关键属性
+**关键属性**
 
 - 二分查找的最基础和最基本的形式。
 - 查找条件可以在不与元素的两侧进行比较的情况下确定（或使用它周围的特定元素）。
 - 不需要后处理，因为每一步中，你都在检查是否找到了元素。如果到达末尾，则知道未找到该元素。
 
-区分语法
+**区分语法**
 
 - 初始条件：left = 0, right = length-1
 - 终止：left > right
 - 向左查找：right = mid-1
 - 向右查找：left = mid+1
 
-#### 模板2
+**相关题目**
+
+- [69-x的平方根](/docs/binarysearch/69-x的平方根.md)
+- [374-猜数字大小](/docs/binarysearch/374-猜数字大小.md)
+- [33-搜索旋转排序数组](/docs/binarysearch/33-搜索旋转排序数组.md)
+
+### 模板2
+
+是二分查找的高级模板。它用于查找需要访问数组中当前索引及其直接右邻居索引的元素或条件。
 
 ```
 int binarySearch(int[] nums, int target){
@@ -77,9 +86,7 @@ int binarySearch(int[] nums, int target){
 }
 ```
 
-是二分查找的高级模板。它用于查找需要访问数组中当前索引及其直接右邻居索引的元素或条件。
-
-关键属性
+**关键属性**
 
 - 一种实现二分查找的高级方法。
 - 查找条件需要访问元素的直接右邻居。
@@ -87,10 +94,66 @@ int binarySearch(int[] nums, int target){
 - 保证查找空间在每一步中至少有 2 个元素。
 - 需要进行后处理。 当你剩下 1 个元素时，循环 / 递归结束。 需要评估剩余元素是否符合条件。
 
-
-区分语法
+**区分语法**
 
 - 初始条件：left = 0, right = length
 - 终止：left == right
 - 向左查找：right = mid
 - 向右查找：left = mid+1
+
+**相关题目**
+
+- [278-第一个错误的版本](/docs/binarysearch/278-第一个错误的版本.md)
+- [162-寻找峰值](/docs/array/162-寻找峰值.md)
+- [153-寻找旋转排序数组中的最小值](/docs/array/153-寻找旋转排序数组中的最小值.md)
+
+### 模板3
+
+它用于搜索需要访问当前索引及其在数组中的直接左右邻居索引的元素或条件。
+
+```
+int binarySearch(int[] nums, int target) {
+    if (nums == null || nums.length == 0)
+        return -1;
+
+    int left = 0, right = nums.length - 1;
+    while (left + 1 < right){
+        // Prevent (left + right) overflow
+        int mid = left + (right - left) / 2;
+        if (nums[mid] == target) {
+            return mid;
+        } else if (nums[mid] < target) {
+            left = mid;
+        } else {
+            right = mid;
+        }
+    }
+
+    // Post-processing:
+    // End Condition: left + 1 == right
+    if(nums[left] == target) return left;
+    if(nums[right] == target) return right;
+    return -1;
+}
+```
+
+**关键属性**
+
+- 实现二分查找的另一种方法。
+- 搜索条件需要访问元素的直接左右邻居。
+- 使用元素的邻居来确定它是向右还是向左。
+- 保证查找空间在每个步骤中至少有 3 个元素。
+- 需要进行后处理。当剩下 2 个元素时，循环 / 递归结束。需要评估其余元素是否符合条件。
+
+**区分语法**
+
+初始条件：
+
+- left = 0, right = length-1
+- 终止：left + 1 == right
+- 向左查找：right = mid
+- 向右查找：left = mid
+
+**相关题目**
+
+- [34-在排序数组中查找元素的第一个和最后一个位置](/docs/binarysearch/34-在排序数组中查找元素的第一个和最后一个位置.md)
