--- a/docs/binarysearch/二分查找.md
+++ b/docs/binarysearch/二分查找.md
@@ -111,6 +111,8 @@ int binarySearch(int[] nums, int target){
 
 它用于搜索需要访问当前索引及其在数组中的直接左右邻居索引的元素或条件。
 
+PS：主要时因为他的条件时 left + 1 < right 来结束，且左右指针都会被mid覆盖。那么退出循环的结果。一定是 left + 1 = right 。是一个范围，而不可能只是某一个值。
+
 ```
 int binarySearch(int[] nums, int target) {
     if (nums == null || nums.length == 0)
@@ -157,3 +159,4 @@ int binarySearch(int[] nums, int target) {
 **相关题目**
 
 - [34-在排序数组中查找元素的第一个和最后一个位置](/docs/binarysearch/34-在排序数组中查找元素的第一个和最后一个位置.md)
+- [658-找到K个最接近的元素](/docs/binarysearch/658-找到K个最接近的元素.md)
