--- a/docs/array/162-寻找峰值.md
+++ b/docs/array/162-寻找峰值.md
@@ -1,6 +1,6 @@
 # 162 寻找峰值
 
-easy
+medium
 
 ## 题目
 
@@ -35,6 +35,10 @@ easy
 - 对于所有有效的 i 都有 `nums[i] != nums[i + 1]`
 
 ## 思路
+
+#### 二分法
+
+模板2 和 模板3 均可。
 
 ## 实现
 
