--- a/docs/binarysearch/二分查找.md
+++ b/docs/binarysearch/二分查找.md
@@ -160,3 +160,4 @@ int binarySearch(int[] nums, int target) {
 
 - [34-在排序数组中查找元素的第一个和最后一个位置](/docs/binarysearch/34-在排序数组中查找元素的第一个和最后一个位置.md)
 - [658-找到K个最接近的元素](/docs/binarysearch/658-找到K个最接近的元素.md)
+- [162-寻找峰值](/docs/array/162-寻找峰值.md)
